# challenge

./: .gitattributes  .gitignore  README.md  README_en.md
backend/: .env  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
backend/ApiTest/: Dockerfile  pom.xml
backend/ApiTest/src/main/java/kafka/com/br/ApiTest/: ApiTestApplication.java
backend/ApiTest/src/main/java/kafka/com/br/ApiTest/controller/: FormController.java
backend/ApiTest/src/main/java/kafka/com/br/ApiTest/docs/: SpringDoc.java
backend/ApiTest/src/main/java/kafka/com/br/ApiTest/dto/: ExceptionData.java  FormData.java
backend/ApiTest/src/main/java/kafka/com/br/ApiTest/exceptions/: CaptchaIsNotCorrect.java  CustomizedException.java
backend/ApiTest/src/main/java/kafka/com/br/ApiTest/service/: FormService.java  SendEmailService.java
backend/ApiTest/src/main/resources/: application.yaml
backend/ApiTest/src/test/java/kafka/com/br/ApiTest/: ApiTestApplicationTests.java
backend/config/: config.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/handlers/: contact_handler.go
backend/models/: contact_form.go  email_data.go
backend/services/: email_service.go  mocks.go  recaptcha_service.go
backend/static/: captcha.html
backend/tests/: email_service_test.go  load_test.js  recaptcha_service_test.go  result.html
backend/utils/: error_response.go
data-science/: README.md
data-science-mining/: README.md
frontend/: README.md  app.js  package-lock.json  package.json
frontend-checkout/: README.md
frontend/controllers/: Crawler.js
frontend/routes/: addressRoute.js  index.js
fullstack/: README.md
machine-learning-engineering/: README.md
marketing/: README.md
sistemas/: README.md
sistemas-2/: CMakeLists.txt  README.md  dvd.lua  pong.lua  rect.lua
