cmake_minimum_required(VERSION 3.19)

project("engine" LANGUAGES C)
include(FetchContent)
file(GLOB SOURCES "${CMAKE_SOURCE_DIR}/src/*.c")
add_executable(${PROJECT_NAME} "${SOURCES}")
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_SKIP_INSTALL_RULES ON CACHE BOOL "" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SKIP_INSTALL_ALL ON CACHE BOOL "" FORCE)

# Lua 5.4
set(LUA54_VERSION "5.4.7")
set(LUA54_DIR "${CMAKE_SOURCE_DIR}/vendor/lua/lua54")
set(LUA54_DOWNLOAD "https://github.com/lua/lua/archive/refs/tags/v${LUA54_VERSION}.tar.gz")
if(NOT EXISTS "${LUA54_DIR}")
    FetchContent_Populate(lua54-static URL "${LUA54_DOWNLOAD}" SOURCE_DIR ${LUA54_DIR})
endif()
file(GLOB lua_files "${LUA54_DIR}/*.c")
list(REMOVE_ITEM lua_files "${LUA54_DIR}/lua.c")
list(REMOVE_ITEM lua_files "${LUA54_DIR}/onelua.c")
add_library(lua54-static STATIC ${lua_files})
target_link_libraries(${PROJECT_NAME} PRIVATE lua54-static)

# Klib
set(KLIB_DIR "${CMAKE_SOURCE_DIR}/vendor/mono/klib")
set(KLIB_DOWNLOAD "https://github.com/attractivechaos/klib/archive/5c1451caa1ee476624d00eed71810532c89b82d1.tar.gz")
target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${KLIB_DIR})
if(NOT EXISTS "${KLIB_DIR}")
    FetchContent_Populate(klib URL "${KLIB_DOWNLOAD}" SOURCE_DIR ${KLIB_DIR})
endif()

# Zlib
set(ZLIB_VERSION "v1.3.1")
set(ZLIB_REPO "https://github.com/madler/zlib.git")
set(ZLIB_DIR "${CMAKE_SOURCE_DIR}/vendor/zlib")
set(ZLIB_ROOT "${ZLIB_DIR}" CACHE STRING "" FORCE)
set(ZLIB_LIBRARY "${CMAKE_SOURCE_DIR}/build/_deps/zlib-build/libz.a" CACHE FILEPATH "")
set(ZLIB_INCLUDE_DIR "${ZLIB_DIR}" CACHE PATH "")
set(ZLIB_FOUND TRUE CACHE BOOL "")
FetchContent_Declare(zlib GIT_REPOSITORY ${ZLIB_REPO} GIT_TAG ${ZLIB_VERSION} SOURCE_DIR ${ZLIB_DIR})
FetchContent_MakeAvailable(zlib)
target_link_libraries(${PROJECT_NAME} PRIVATE zlib)
set_target_properties(zlib PROPERTIES EXCLUDE_FROM_ALL TRUE)
add_library(ZLIB::ZLIB ALIAS zlibstatic)

# SPNG
set(SPNG_VERSION "v0.7.4")
set(SPNG_REPO "https://github.com/randy408/libspng.git")
set(SPNG_ROOT "${CMAKE_SOURCE_DIR}/vendor/spng")
set(SPNG_SHARED OFF CACHE BOOL "" FORCE)
set(SPNG_STATIC ON CACHE BOOL "" FORCE)
set(SPNG_USE_MINIZ OFF CACHE BOOL "" FORCE)
set(SPNG_INSTALL OFF CACHE BOOL "" FORCE)
FetchContent_Declare(spng GIT_REPOSITORY ${SPNG_REPO} GIT_TAG ${SPNG_VERSION} SOURCE_DIR ${SPNG_ROOT})
FetchContent_MakeAvailable(spng)
target_link_libraries(${PROJECT_NAME} PRIVATE spng_static)

# OpenGL 2 (glad + glfw + x11)
set(GLAD_DOWNLOAD "https://github.com/gly-engine/archive/archive/refs/heads/glad.tar.gz")
set(GLAD_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/glad")
set(GLFW_VERSION "3.4")
set(GLFW_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/glfw")
set(GLFW_BUILD_WAYLAND OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_X11 ON CACHE BOOL "" FORCE)
set(X11_VERSION "1.8.4")
set(X11_DOWNLOAD "https://github.com/mirror/libX11/archive/refs/tags/libX11-${X11_VERSION}.tar.gz")
set(X11_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/x11")
set(X11_X11_INCLUDE_PATH "${X11_DIR}/include")
set(X11_X11_LIB "${X11_DIR}/lib/libX11.so")
set(XPROTO_VERSION "2025.1")
set(XPROTO_DOWNLOAD "https://gitlab.freedesktop.org/xorg/proto/xorgproto/-/archive/xorgproto-${XPROTO_VERSION}/xorgproto-xorgproto-${XPROTO_VERSION}.tar.gz")
set(XPROTO_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xorgproto")
set(XRANDR_VERSION "1.5.5")
set(XRANDR_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libxrandr/-/archive/libXrandr-${XRANDR_VERSION}/libxrandr-libXrandr-${XRANDR_VERSION}.tar.gz")
set(XRANDR_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xrandr")
set(XINERAMA_VERSION "1.1.4")
set(XINERAMA_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libxinerama/-/archive/libXinerama-${XINERAMA_VERSION}/libxinerama-libXinerama-${XINERAMA_VERSION}.tar.gz")
set(XINERAMA_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xinerama")
set(XKB_VERSION "1.0.9")
set(XKB_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libxkbfile/-/archive/libxkbfile-${XKB_VERSION}/libxkbfile-libxkbfile-${XKB_VERSION}.tar.gz")
set(XKB_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xkbfile")
set(XCURSOR_VERSION "1.1.12")
set(XCURSOR_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libxcursor/-/archive/libXcursor-${XCURSOR_VERSION}/libxcursor-libXcursor-${XCURSOR_VERSION}.tar.gz")
set(XCURSOR_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xcursor")
set(XI_VERSION "1.8.2")
set(XI_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libxi/-/archive/libXi-${XI_VERSION}/libxi-libXi-${XI_VERSION}.tar.gz")
set(XI_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xi")
set(XEXT_VERSION "1.2.0")  # XShape vem no Xext
set(XEXT_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libXext/-/archive/libXext-${XEXT_VERSION}/libxext-libXext-${XEXT_VERSION}.tar.gz")
set(XEXT_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xext")
set(XRENDER_VERSION "0.9.10")
set(XRENDER_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libXrender/-/archive/libXrender-${XRENDER_VERSION}/libxrender-libXrender-${XRENDER_VERSION}.tar.gz")
set(XRENDER_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xrender")
set(XFIXES_VERSION "6.0.0")
set(XFIXES_DOWNLOAD "https://gitlab.freedesktop.org/xorg/lib/libxfixes/-/archive/libXfixes-${XFIXES_VERSION}/libxfixes-libXfixes-${XFIXES_VERSION}.tar.gz")
set(XFIXES_DIR "${CMAKE_SOURCE_DIR}/vendor/opengl/xfixes")
set(X11_Xrandr_INCLUDE_PATH "${XRANDR_DIR}/include")
set(X11_Xinerama_INCLUDE_PATH "${XINERAMA_DIR}/include")
set(X11_Xkb_INCLUDE_PATH "${XKB_DIR}/include")
set(X11_Xcursor_INCLUDE_PATH "${XCURSOR_DIR}/include")
set(X11_Xi_INCLUDE_PATH "${XI_DIR}/include")
set(X11_Xshape_INCLUDE_PATH "${XEXT_DIR}/include")
set(X11_Xrender_INCLUDE_PATH "${XRENDER_DIR}/include")
set(X11_Xfixes_INCLUDE_PATH "${XFIXES_DIR}/include")
set(X11_HEADERS "${X11_DIR}/include;${XPROTO_DIR}/include")
set(X11_HEADERS_EXTRA "${X11_Xinerama_INCLUDE_PATH};${X11_Xinerama_INCLUDE_PATH};${X11_Xkb_INCLUDE_PATH};${X11_Xcursor_INCLUDE_PATH};${X11_Xi_INCLUDE_PATH};${X11_Xshape_INCLUDE_PATH};${X11_Xrender_INCLUDE_PATH};${X11_Xfixes_INCLUDE_PATH}")
if (NOT EXISTS "${GLAD_DIR}/include")
    FetchContent_Populate(glad URL ${GLAD_DOWNLOAD} SOURCE_DIR ${GLAD_DIR})
endif()
if (NOT EXISTS "${X11_DIR}/include")
    FetchContent_Populate(x11 URL ${X11_DOWNLOAD} SOURCE_DIR ${X11_DIR})
endif()
if (NOT EXISTS "${XPROTO_DIR}/include")
    FetchContent_Populate(xproto URL ${XPROTO_DOWNLOAD} SOURCE_DIR ${XPROTO_DIR})
endif()
if (NOT EXISTS "${XRANDR_DIR}/include")
    FetchContent_Populate(xrandr URL ${XRANDR_DOWNLOAD} SOURCE_DIR ${XRANDR_DIR})
endif()
if (NOT EXISTS "${XINERAMA_DIR}/include")
    FetchContent_Populate(xinerama URL ${XINERAMA_DOWNLOAD} SOURCE_DIR ${XINERAMA_DIR})
endif()
if (NOT EXISTS "${XKB_DIR}/include")
    FetchContent_Populate(xkbfile URL ${XKB_DOWNLOAD} SOURCE_DIR ${XKB_DIR})
endif()
if (NOT EXISTS "${XCURSOR_DIR}/include")
    FetchContent_Populate(xcursor URL ${XCURSOR_DOWNLOAD} SOURCE_DIR ${XCURSOR_DIR})
endif()
if (NOT EXISTS "${XI_DIR}/include")
    FetchContent_Populate(xi URL ${XI_DOWNLOAD} SOURCE_DIR ${XI_DIR})
endif()
if (NOT EXISTS "${XEXT_DIR}/include")
    FetchContent_Populate(xext URL ${XEXT_DOWNLOAD} SOURCE_DIR ${XEXT_DIR})
endif()
if (NOT EXISTS "${XRENDER_DIR}/include")
    FetchContent_Populate(xext URL ${XRENDER_DOWNLOAD} SOURCE_DIR ${XRENDER_DIR})
endif()
if (NOT EXISTS "${XFIXES_DIR}/include")
    FetchContent_Populate(xext URL ${XFIXES_DOWNLOAD} SOURCE_DIR ${XFIXES_DIR})
endif()
FetchContent_Declare(
    glfw
    GIT_REPOSITORY https://github.com/glfw/glfw
    GIT_TAG ${GLFW_VERSION}
    SOURCE_DIR ${GLFW_DIR}
)
FetchContent_MakeAvailable(glfw)
add_library(glad_gl STATIC "${GLAD_DIR}/src/gl.c")
target_link_libraries(${PROJECT_NAME} PRIVATE glfw glad_gl)
target_include_directories(glfw SYSTEM PRIVATE "${X11_HEADERS};${X11_HEADERS_EXTRA}")
target_include_directories(glad_gl SYSTEM PRIVATE "${GLAD_DIR}/include")

include_directories(
    "${SPNG_ROOT}/spng"
    "${GLAD_DIR}/include"
    "${GLFW_DIR}/include"
    "${LUA54_DIR}"
)
